fix overflow

--- a/app/components/Navbar.module.scss
+++ b/app/components/Navbar.module.scss
@@ -54,9 +54,7 @@
 }
 
 .Button {
-    position: relative;
-    z-index: 5;
-    width: 100%;
+    cursor: pointer;
 }
 
 .dropdown {
@@ -108,7 +106,7 @@ a.active {
         gap: 0;
         z-index: -99;
 
-        a, button {
+        a, .resources {
             border-bottom: 1px solid #F1F1F1;
             padding: 16px 32px;
 
